layout issues going slow, working with nested grids

--- a/interactive-pricing-component-main/style.css
+++ b/interactive-pricing-component-main/style.css
@@ -1,36 +1,103 @@
+/*@media screen and (min-width: 768px) {*/
+/*    .container {*/
+/*        display: grid;*/
+/*        grid-template-columns: 200px auto 200px;*/
+/*        grid-template-rows: repeat(2,auto);*/
+/*        gap: 15%;*/
+/*    }*/
+/*}*/
 
+body {
+    overflow: hidden;
+}
 
+.container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: repeat(2,auto);
+    gap: 15%;
+}
+
+.container{
+
+    background:  url("./images/bg-pattern.svg") no-repeat;
+}
 
 .card {
+
     display: grid;
     grid-template-columns: repeat(3,auto);
     grid-template-rows: repeat(6,auto);
     gap: 10px 10px;
 }
 
-.container {
-    background: url("./images/bg-pattern.svg") no-repeat;
-
+.card{
+    grid-column-start: 1;
+    grid-row-start: 2;
 }
+/*body {*/
+/*    background:  url("./images/bg-pattern.svg") no-repeat center;*/
 
-.container > div:nth-child(odd){
-    background: grey;
-}
 
-.header > img {
-    z-index: -1;
-}
+/*}*/
 
-.header > p {
-    z-index: 1;
-}
+/*.container > div:nth-child(odd){*/
+/*    background: grey;*/
+/*}*/
+
+/*.header > img {*/
+
+/*    position: absolute;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+
+/*}*/
+
+/*.header {*/
+/*    display: grid;*/
+/*    grid-template-columns: repeat(3,auto);*/
+/*    grid-template-rows: 1fr;*/
+
+/*}*/
+
+/*.header > p {*/
+/*    grid-column-start: 2;*/
+/*    */
+/*    text-align: center;*/
+/*    align-content: center;*/
+/*    justify-content: center;*/
+
+/*}*/
 
 .header {
-
     grid-column-start: 2;
     grid-row-start: 1;
 
+    display: flex;
+    flex-flow: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    height: 300px;
+    background: url("./images/pattern-circles.svg") no-repeat center;
+
 }
+
+p:nth-child(1) {
+
+    font-size: 1.5em;
+    margin: 0;
+}
+
+.header > p {
+    margin: 5px;
+}
+
+.h-article {
+    color: grey;
+}
+
+
 .page-views{
     grid-column-start: 2;
     grid-row-start: 2;
@@ -53,6 +120,8 @@
 }
 
 .card {
+    grid-column-start: 2;
+    grid-row-start: 2;
     background-color: green;
     border-radius: 10px;
 }
